Crash when exceeding memory_cache_limit in the viewport #92838

Closed
opened 2021-11-04 20:52:02 +01:00 by Alessio Monti di Sopra · 12 comments

System Information
Operating system: Linux-5.4.0-89-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GT 740M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-03 21:09, hash: 3e6907eb8a
Worked: 2.93.4

Short description of error
Blender crashes when exceeding the memory_cache_limit value by having an image sequence drawn in the viewport, as an example as a background image or used as texture in a material.

Blender.crash for the builbot build of 3.0
blender.crash.txt

I noticed that in my debug build the crash doesn't happen.
Ok, my debug build was simply outdated.
This is caused by b1bf884889, I haven't debugged farther but in this case it seems like item->c_handle is NULL in moviecache_valfree()

Exact steps for others to reproduce the error

  • open the default scene
  • change memory limit in the user preferences to some low value
  • drag and drop a movie file in the 3d viewport
  • fill the cache by changing the current frame
**System Information** Operating system: Linux-5.4.0-89-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GT 740M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-03 21:09, hash: `3e6907eb8a` Worked: 2.93.4 **Short description of error** Blender crashes when exceeding the `memory_cache_limit` value by having an image sequence drawn in the viewport, as an example as a background image or used as texture in a material. Blender.crash for the builbot build of 3.0 [blender.crash.txt](https://archive.blender.org/developer/F11718485/blender.crash.txt) ~~I noticed that in my debug build the crash doesn't happen.~~ Ok, my debug build was simply outdated. This is caused by b1bf8848895b, I haven't debugged farther but in this case it seems like `item->c_handle` is NULL in `moviecache_valfree()` **Exact steps for others to reproduce the error** * open the default scene * change memory limit in the user preferences to some low value * drag and drop a movie file in the 3d viewport * fill the cache by changing the current frame

Added subscriber: @a.monti

Added subscriber: @a.monti

#95095 was marked as duplicate of this issue

#95095 was marked as duplicate of this issue

#94842 was marked as duplicate of this issue

#94842 was marked as duplicate of this issue

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

Added subscriber: @deadpin

Added subscriber: @deadpin

This may also relate to #92740. I'll poke around tonight and see if I can get this bug to repro after my fix there.

This may also relate to #92740. I'll poke around tonight and see if I can get this bug to repro after my fix there.

This issue was referenced by ff5630b7fa

This issue was referenced by ff5630b7fafec56d9b1187ee42e8b786b62cb498

This issue was referenced by 7061d1e39f

This issue was referenced by 7061d1e39fea7495e787a071b83757e3dc0d61a7

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Jesse Yurkovich self-assigned this 2021-11-05 05:03:02 +01:00

This should now be fixed as well with the above commit. I was able to repro and then add in the additional guard.

This should now be fixed as well with the above commit. I was able to repro and then add in the additional guard.
Member

Added subscribers: @entomology, @lichtwerk

Added subscribers: @entomology, @lichtwerk
Member

Added subscribers: @HectorCenteno, @iss

Added subscribers: @HectorCenteno, @iss
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92838
No description provided.