source/blender/imbuf/intern/moviecache.c
@@ -122,11 +122,11 @@ static void moviecache_valfree(void *val)
 
   PRINT("%s: cache '%s' free item %p buffer %p\n", __func__, cache->name, item, item->ibuf);
 
-  BLI_mutex_lock(&limitor_lock);
   if (item->c_handle) {
+    BLI_mutex_lock(&limitor_lock);
     MEM_CacheLimiter_unmanage(item->c_handle);
+    BLI_mutex_unlock(&limitor_lock);
   }
-  BLI_mutex_unlock(&limitor_lock);
 
   if (item->ibuf) {
     IMB_freeImBuf(item->ibuf);
